@@ -223,6 +223,7 @@ Bug Fixes:
 - PR#5619: Uncaught CType.Unify exception in the compiler
 - PR#5620: invalid printing of type manifest (camlp4 revised syntax)
 - PR#5643: issues with .cfi and .loc directives generated by ocamlopt -g
+- PR#5651: printer for abstract data type (camlp4 revised syntax)
 - PR#5661: fixes for the test suite
 - PR#5671: initialization of compare_ext field in caml_final_custom_operations()
 - problem with printing of string literals in camlp4 (reported on caml-list)
